chore: rename existing SID for SCP

--- a/templates/service-control-policies.yaml
+++ b/templates/service-control-policies.yaml
@@ -86,7 +86,7 @@ Resources:
                         "arn:aws:iam::*:role/SuperwerkerBackupTagsEnforcementRemediationRole"
                     ],
                     "Effect": "Deny",
-                    "Sid": "SWProtectBackup"
+                    "Sid": "SWProtectBackupRoles"
                 }
               - !Ref AWS::NoValue
       Attach: true
