fix: remove incorrect comma

--- a/templates/service-control-policies.yaml
+++ b/templates/service-control-policies.yaml
@@ -103,7 +103,7 @@ Resources:
                         "arn:aws:backup:*:*:backup-vault:*"
                     ],
                     "Effect": "Deny",
-                    "Sid": "SWProtectBackups",
+                    "Sid": "SWProtectBackups"
                 }
               - !Ref AWS::NoValue
       Attach: true
