fix(service-control-policies): should not fail if neither SecurityHub nor Backup feature are enabled

--- a/templates/service-control-policies.yaml
+++ b/templates/service-control-policies.yaml
@@ -19,11 +19,15 @@ Parameters:
 Conditions:
   IncludeSecurityHub: !Equals [ !Ref IncludeSecurityHub, true ]
   IncludeBackup: !Equals [ !Ref IncludeBackup, true ]
+  SCPwithSecurityAndBackup: !And
+    - !Equals [ !Ref IncludeSecurityHub, true ]
+    - !Equals [ !Ref IncludeBackup, true ]
 
 Resources:
 
   SCPBaseline:
     Type: AWS::CloudFormation::CustomResource
+    Condition: SCPwithSecurityAndBackup
     Properties:
       ServiceToken: !GetAtt SCPCustomResource.Arn
       Policy: !Sub
