chore: change logical ID to enforce update

--- a/templates/service-control-policies.yaml
+++ b/templates/service-control-policies.yaml
@@ -22,7 +22,7 @@ Conditions:
 
 Resources:
 
-  ServiceControlPolicy:
+  SCPBaseline:
     Type: AWS::CloudFormation::CustomResource
     Properties:
       ServiceToken: !GetAtt SCPCustomResource.Arn
