--- a/templates/service-control-policies.yaml
+++ b/templates/service-control-policies.yaml
@@ -22,7 +22,7 @@ Conditions:
 
 Resources:
 
-  ServiceControlPolicy:
+  SCPBaseline:
     Type: AWS::CloudFormation::CustomResource
     Properties:
       ServiceToken: !GetAtt SCPCustomResource.Arn
@@ -176,7 +176,7 @@ Resources:
             parameters = dict(
                 Content=Policy,
                 Description="superwerker - {}".format(LogicalResourceId),
-                Name=LogicalResourceId,
+                Name="superwerker",
             )
 
             policy_id = PhysicalResourceId
