--- a/tests/buildspec.yaml
+++ b/tests/buildspec.yaml
@@ -14,7 +14,7 @@ phases:
   build:
     commands:
       # vend fresh account/org
-      - pip3 install -r tests/requirements.txt --use-feature=2020-resolver
+      - pip3 install -r tests/requirements.txt 
       - pip3 install awscli==1.19.75 --upgrade --use-feature=2020-resolver
       - curl --version
       - aws --version
