--- a/templates/backup.yaml
+++ b/templates/backup.yaml
@@ -437,7 +437,7 @@ Resources:
       Name: superwerker-cfn-org
       ArtifactS3Location: !Sub s3://${EnableCloudFormationStacksetsOrgAccessArtifacts}
       ExecutionRoleArn: !GetAtt EnableCloudFormationStacksetsOrgAccessRole.Arn
-      RuntimeVersion: syn-nodejs-2.2
+      RuntimeVersion: syn-nodejs-puppeteer-3.1
       StartCanaryAfterCreation: true
       RunConfig:
         TimeoutInSeconds: 300
