--- a/tests/build.yaml
+++ b/tests/build.yaml
@@ -21,6 +21,8 @@ Resources:
     Type: AWS::CodeBuild::Project
     Properties:
       TimeoutInMinutes: 180
+      BuildBatchConfig:
+        ServiceRole: !GetAtt BuildAndTestProjectRole.Arn
       Environment:
         ComputeType: BUILD_GENERAL1_SMALL
         Image: aws/codebuild/amazonlinux2-x86_64-standard:3.0
@@ -46,6 +48,7 @@ Resources:
         Location: https://github.com/superwerker/superwerker.git
         BuildSpec: tests/buildspec.yaml
       Triggers:
+        BuildType: BUILD_BATCH
         Webhook: true
         FilterGroups:
         - - Type: EVENT
