--- a/tests/build.yaml
+++ b/tests/build.yaml
@@ -9,6 +9,11 @@ Parameters:
   DeploymentBucket:
     Type: String
     Default: superwerker-deployment
+  AllowedGitHubAccountIDs:
+    Type: CommaDelimitedList
+  AllowedGitHubCommitMessageRegExp:
+    Type: String
+    Default: \[CodeBuild\]
 
 Resources:
 
@@ -16,6 +21,8 @@ Resources:
     Type: AWS::CodeBuild::Project
     Properties:
       TimeoutInMinutes: 180
+      BuildBatchConfig:
+        ServiceRole: !GetAtt BuildAndTestProjectRole.Arn
       Environment:
         ComputeType: BUILD_GENERAL1_SMALL
         Image: aws/codebuild/amazonlinux2-x86_64-standard:3.0
@@ -40,6 +47,20 @@ Resources:
         Type: GITHUB
         Location: https://github.com/superwerker/superwerker.git
         BuildSpec: tests/buildspec.yaml
+      Triggers:
+        BuildType: BUILD_BATCH
+        Webhook: true
+        FilterGroups:
+        - - Type: EVENT
+            Pattern: PULL_REQUEST_CREATED,PULL_REQUEST_UPDATED
+          - Type: COMMIT_MESSAGE
+            Pattern: !Ref AllowedGitHubCommitMessageRegExp
+          - Type: ACTOR_ACCOUNT_ID
+            Pattern: !Sub
+              - ^(${AllowedGitHubAccountIDsRegExp})$
+              - AllowedGitHubAccountIDsRegExp: !Join
+                - "|"
+                - !Ref AllowedGitHubAccountIDs
 
   BuildAndTestProjectRole:
     Type: AWS::IAM::Role
