tests: make running tests the default
and make skipping ci/PR tests the exception.

this also hopefully leads to cleaner commit histories without
meaningless "[CodeBuild]" commits.

--- a/tests/build.yaml
+++ b/tests/build.yaml
@@ -11,9 +11,9 @@ Parameters:
     Default: superwerker-deployment
   AllowedGitHubAccountIDs:
     Type: CommaDelimitedList
-  AllowedGitHubCommitMessageRegExp:
+  SkipBuildCommitMessageRegExp:
     Type: String
-    Default: \[CodeBuild\]
+    Default: \[skip ci\]
 
 Resources:
 
@@ -54,7 +54,8 @@ Resources:
         - - Type: EVENT
             Pattern: PULL_REQUEST_CREATED,PULL_REQUEST_UPDATED
           - Type: COMMIT_MESSAGE
-            Pattern: !Ref AllowedGitHubCommitMessageRegExp
+            Pattern: !Ref SkipBuildCommitMessageRegExp
+            ExcludeMatchedPattern: true
           - Type: ACTOR_ACCOUNT_ID
             Pattern: !Sub
               - ^(${AllowedGitHubAccountIDsRegExp})$
