--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,3 +35,47 @@ jobs:
         aws_bucket: ${{ secrets.AWS_BUCKET_NAME}}
         source_dir: templates/
         destination_dir: ${{ steps.semantic.outputs.new_release_version }}/templates/
+
+    - name: Clone superwerker-quickstart
+      run: git clone https://superwerker-bot:${{ secrets.BOT_ACCESS_TOKEN }}@github.com/superwerker/quickstart-superwerker.git quickstart-superwerker
+  
+    - name: Configure Git, email
+      run: git config --global user.email "services+github-superwerker-bot@superluminar.io"
+  
+    - name: Configure Git, name
+      run: git config --global user.name "superwerker-bot"
+  
+    - name: sync main branch of fork with upstream
+      run: |
+        cd quickstart-superwerker \
+          && git remote add upstream https://superwerker-bot:${{ secrets.BOT_ACCESS_TOKEN }}@github.com/aws-quickstart/quickstart-superwerker.git \
+          && git fetch upstream \
+          && git reset --hard upstream/main \
+          && git push origin main
+  
+    - name: Create a new branch for the release
+      run: 'cd quickstart-superwerker && git checkout -b release/${{ steps.semantic.outputs.new_release_version }}'
+  
+    - name: Remove existing CloudFormation templates
+      run: rm -rf quickstart-superwerker/templates
+  
+    - name: Copy CloudFormation templates
+      run: cp -a templates quickstart-superwerker/
+  
+    - name: List files
+      run: ls -ahl quickstart-superwerker/templates
+  
+    - name: Create commit
+      run: 'cd quickstart-superwerker && git add templates && git commit -m "release: ${{ steps.semantic.outputs.new_release_version }}"'
+  
+    - name: Push to repository
+      run: 'cd quickstart-superwerker && git push -u origin release/${{ steps.semantic.outputs.new_release_version }}'
+  
+    - name: Create Pull Request
+      run: |
+        curl \
+          -X POST \
+          -H "Accept: application/vnd.github.v3+json" \
+          -H "Authorization: token ${{ secrets.BOT_ACCESS_TOKEN }}" \
+          https://api.github.com/repos/aws-quickstart/quickstart-superwerker/pulls \
+          -d '{"head":"superwerker:release/${{ steps.semantic.outputs.new_release_version }}", "base":"main", "title": "release: ${{ steps.semantic.outputs.new_release_version }}", "body": "Hey @sbstjn, take a look at the most recent release:\n\nhttps://github.com/superwerker/superwerker/releases/tag/v${{ steps.semantic.outputs.new_release_version }}"}'
