--- a/tests/build.yaml
+++ b/tests/build.yaml
@@ -52,7 +52,7 @@ Resources:
         Webhook: true
         FilterGroups:
         - - Type: EVENT
-            Pattern: PUSH, PULL_REQUEST_CREATED, PULL_REQUEST_UPDATED 
+            Pattern: PUSH, PULL_REQUEST_CREATED
           - Type: COMMIT_MESSAGE
             Pattern: !Ref SkipBuildCommitMessageRegExp
             ExcludeMatchedPattern: true
