--- a/templates/control-tower.yaml
+++ b/templates/control-tower.yaml
@@ -1,5 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 Transform: AWS::Serverless-2016-10-31
+Description: Sets up AWS ControlTower. (qs-1s3rsr7lh)
 
 Parameters:
   AuditAWSAccountEmail:
