--- a/templates/rootmail.yaml
+++ b/templates/rootmail.yaml
@@ -1,5 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 Transform: AWS::Serverless-2016-10-31
+Description: Sets up root mail. (qs-1s3rsr7mr)
 
 Parameters:
   Domain:
