--- a/templates/security-hub.yaml
+++ b/templates/security-hub.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 Transform: AWS::Serverless-2016-10-31
-Description: Sets up SecurityHub with a delegated administor and automatically enabled for all AWS accounts in the AWS Organization
+Description: Sets up SecurityHub with a delegated administor and automatically enabled for all AWS accounts in the AWS Organization. (qs-1s3rsr7n9)
 
 Resources:
 
