--- a/tests/build.yaml
+++ b/tests/build.yaml
@@ -113,4 +113,4 @@ Resources:
         - Arn: !Sub arn:${AWS::Partition}:codebuild:${AWS::Region}:${AWS::AccountId}:project/${BuildAndTestProject}
           Id: nightly-codebuild-scheduler
           RoleArn: !GetAtt CodeBuildAndTestProjectSchedulerRole.Arn
-          Input: '{"sourceVersion":"^refs/heads/main$"}'
+          Input: '{"sourceVersion":"main"}'
