--- a/tests/account-factory-wiring.yaml
+++ b/tests/account-factory-wiring.yaml
@@ -78,3 +78,121 @@ Resources:
       PortfolioId: !GetAtt ControlTowerServiceCatalogLookup.PortfolioId
       PrincipalARN: !Ref PipelineCloudformationRoleArn
       PrincipalType: IAM
+  
+  SetupControlTowerArtifactLocation:
+    Type: AWS::S3::Bucket
+    Properties:
+      LifecycleConfiguration:
+        Rules:
+          - ExpirationInDays: 1
+            Status: Enabled
+
+
+  SetupControlTowerArtifactLocationPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref SetupControlTowerArtifactLocation
+      PolicyDocument:
+        Statement:
+          - Effect: Allow
+            Action: '*'
+            Resource:
+              - !GetAtt SetupControlTowerArtifactLocation.Arn
+              - !Sub ${SetupControlTowerArtifactLocation.Arn}/*
+            Principal:
+              AWS: !GetAtt SetupControlTowerCanaryRole.Arn
+
+  SetupControlTowerCanaryRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: lambda.amazonaws.com
+            Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+        - arn:aws:iam::aws:policy/AdministratorAccess # fixme: least privilege
+      Policies:
+        - PolicyName: AllowS3List
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - s3:ListAllMyBuckets
+                  - s3:GetBucketLocation
+                  - cloudwatch:PutMetricData
+                Resource: '*'
+
+  ControlTowerBugWorkAroundCanary:
+    Type: AWS::Synthetics::Canary
+    Properties:
+      Name: superwerker-ct-bug-wa
+      ArtifactS3Location: !Sub s3://${SetupControlTowerArtifactLocation}
+      ExecutionRoleArn: !GetAtt SetupControlTowerCanaryRole.Arn
+      RuntimeVersion: syn-nodejs-puppeteer-3.1
+      StartCanaryAfterCreation: false
+      RunConfig:
+        TimeoutInSeconds: 300
+      Schedule:
+        Expression: rate(0 minute) # manual start
+      Code:
+        Handler: pageLoadBlueprint.handler
+        Script: !Sub |
+          var synthetics = require('Synthetics');
+          const log = require('SyntheticsLogger');
+
+          const httpGet = url => {
+            const https = require('https');
+            return new Promise((resolve, reject) => {
+              https.get(url, res => {
+                res.setEncoding('utf8');
+                let body = '';
+                res.on('data', chunk => body += chunk);
+                res.on('end', () => resolve(body));
+              }).on('error', reject);
+            });
+          };
+
+          const flowBuilderBlueprint = async function () {
+            let page = await synthetics.getPage();
+
+            await synthetics.executeStep('consoleLogin', async function () {
+              const AWS = require("aws-sdk");
+
+              const federationEndpoint = 'https://signin.aws.amazon.com/federation';
+              const issuer = 'superwerker';
+              const destination = 'https://console.aws.amazon.com/';
+
+              let credentials = await AWS.config.credentialProvider.resolve((err, cred) => { return cred; }).resolvePromise()
+
+              const session = {
+                sessionId: credentials.accessKeyId,
+                sessionKey: credentials.secretAccessKey,
+                sessionToken: credentials.sessionToken
+              };
+
+              const encodedSession = encodeURIComponent(JSON.stringify(session));
+              const signinTokenUrl = `${!federationEndpoint}?Action=getSigninToken&SessionDuration=3600&Session=${!encodedSession}`;
+
+              const signinResponse = await httpGet(signinTokenUrl);
+
+              let consoleLoginUrl = `${!federationEndpoint}?Action=login&Issuer=${!issuer}&Destination=${!destination}&SigninToken=${!
+                JSON.parse(signinResponse).SigninToken
+              }`;
+
+              await page.goto(consoleLoginUrl, {waitUntil: ['load', 'networkidle0']});
+
+            });
+
+            await synthetics.executeStep('controltowerdashboard', async function () {
+              await page.goto("https://${AWS::Region}.console.aws.amazon.com/controltower/home/dashboard?region=${AWS::Region}", {waitUntil: ['load', 'networkidle0']});
+            });
+          };
+
+          exports.handler = async () => {
+            return await flowBuilderBlueprint();
+          };
