--- a/tests/account-factory-wiring.yaml
+++ b/tests/account-factory-wiring.yaml
@@ -127,6 +127,10 @@ Resources:
                   - cloudwatch:PutMetricData
                 Resource: '*'
 
+  # workaround for CT bug: trigger the `GetLandingZone` event once by reloading the dashboard
+  # otherwise enrolling new accounts via tge CT Account Factory would fail with
+  # "AWS Control Tower cannot create accounts until your landing zone is set up completely."
+
   ControlTowerBugWorkAroundCanary:
     Type: AWS::Synthetics::Canary
     Properties:
