--- a/tests/account-factory-wiring.yaml
+++ b/tests/account-factory-wiring.yaml
@@ -138,11 +138,11 @@ Resources:
       ArtifactS3Location: !Sub s3://${SetupControlTowerArtifactLocation}
       ExecutionRoleArn: !GetAtt SetupControlTowerCanaryRole.Arn
       RuntimeVersion: syn-nodejs-puppeteer-3.1
-      StartCanaryAfterCreation: false
+      StartCanaryAfterCreation: true
       RunConfig:
         TimeoutInSeconds: 300
       Schedule:
-        Expression: rate(0 minute) # manual start
+        Expression: rate(0 minute) # run once
       Code:
         Handler: pageLoadBlueprint.handler
         Script: !Sub |
