ARNs in CT changed to satisfy quickstart linter

--- a/templates/control-tower.yaml
+++ b/templates/control-tower.yaml
@@ -21,8 +21,8 @@ Resources:
               Service: lambda.amazonaws.com
             Action: sts:AssumeRole
       ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
-        - arn:aws:iam::aws:policy/AdministratorAccess # fixme: least privilege
+        - !Sub arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+        - !Sub arn:${AWS::Partition}:iam::aws:policy/AdministratorAccess # fixme: least privilege
       Policies:
         - PolicyName: AllowS3List
           PolicyDocument:
