--- a/templates/rootmail.yaml
+++ b/templates/rootmail.yaml
@@ -443,7 +443,7 @@ Resources:
                       Service: lambda.amazonaws.com
                     Action: sts:AssumeRole
               ManagedPolicyArns:
-                - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+                - arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
               Policies:
                 - PolicyName: AllowSesAccess
                   PolicyDocument:
@@ -570,7 +570,7 @@ Resources:
                       Service: lambda.amazonaws.com
                     Action: sts:AssumeRole
               ManagedPolicyArns:
-                - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+                - arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
               Policies:
                 - PolicyName: OpsSantaFunctionRolePolicy
                   PolicyDocument:
