ARNs in security-hub changed to satisfy quickstart linter

--- a/templates/security-hub.yaml
+++ b/templates/security-hub.yaml
@@ -256,7 +256,7 @@ Resources:
             Statement:
               - Effect: Allow
                 Action: sts:AssumeRole
-                Resource: arn:aws:iam::*:role/AWSControlTowerExecution
+                Resource: !Sub arn:${AWS::Partition}:iam::*:role/AWSControlTowerExecution
         - PolicyName: Organizations
           PolicyDocument:
             Statement:
@@ -393,7 +393,7 @@ Resources:
             Statement:
               - Effect: Allow
                 Action: sts:AssumeRole
-                Resource: arn:aws:iam::*:role/AWSControlTowerExecution
+                Resource: !Sub arn:${AWS::Partition}:iam::*:role/AWSControlTowerExecution
 
   EnableSecurityHub:
     Type: AWS::SSM::Document
