ARNs in build changed to satisfy quickstart linter

--- a/tests/build.yaml
+++ b/tests/build.yaml
@@ -75,4 +75,4 @@ Resources:
               - codebuild.amazonaws.com
           Action: sts:AssumeRole
       ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/AdministratorAccess # FIXME: least privilege
+        - !Sub arn:${AWS::Partition}:iam::aws:policy/AdministratorAccess # FIXME: least privilege
